--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,8 @@ matrix:
     - python: 3.3
     - python: 3.4
     - python: 3.5
+    - python: pypy
+    - python: pypy3
     - python: nightly
 
 script: python setup.py test
